<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/title" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:text="@string/userlogin"
        android:textSize="20sp" />

    <EditText

android:maxLines="1"
        android:maxLength="11"
        android:id="@+id/login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="text"
        android:imeOptions="actionGo"
        android:hint="@string/name" />

    <EditText
        android:inputType="textPassword"
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/pwd" />

    <Button
        android:id="@+id/login_loginbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/regist_button_backgroud"
        android:text="@string/login" />

    <TextView
        android:id="@+id/login_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/login_phone"
        android:textColor="#B5B5B5"
        android:textSize="15sp" />


</LinearLayout>
