<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffff"
    android:orientation="vertical">


    <EditText
        android:id="@+id/regist_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="80dp"
        android:hint="@string/phon"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:maxLength="11" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText

            android:id="@+id/regist_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:hint="@string/verification"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLength="4" />

        <Button
            android:id="@+id/regist_verification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/regist_button_backgroud"
            android:text="@string/sendVerification" />
    </LinearLayout>

    <Button

        android:id="@+id/regist_loginbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/regist_button_backgroud"
        android:text="@string/next" />

</LinearLayout>
