<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F3F3"
   >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="350dp">

                <android.support.v4.view.ViewPager
                    android:id="@+id/homepage_pic"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:background="@drawable/back"
                   />

                <ImageView
                    android:id="@+id/homepage_back"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/gohome" />

                <ImageView
                    android:id="@+id/homepage_select"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/recommend_task_icon" />

                <TextView
                    android:id="@+id/homepage_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="50dp"
                    android:layout_marginLeft="15dp"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/homepage_other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="15dp"
                    android:textSize="20sp" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFCAE4"

                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/homepage_add_pic"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="#FFCAE4"
                    android:padding="3dp"
                    android:src="@drawable/personage_photo_list_select_press" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/homepage_recy_pic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:background="#FFCAE4"

                    />

            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="#ffffff"
                android:gravity="center_horizontal"
                android:padding="2dp"
                android:text="@string/same"
                android:textColor="#ff00"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="1dp"
                android:background="#ffffff"
                android:padding="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ffffff">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="#F2F2F2"
                        android:padding="5sp"
                        android:text="基本资料"
                        android:textSize="20sp" />

                </RelativeLayout>
            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="2dp"
                android:background="#FFFFFF">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:padding="2dp"
                    android:text="@string/nickname"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/homepage_pickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp"
                    android:padding="2dp"
                    android:text="@string/secrecy"
                    android:textColor="#80CACD"
                    android:textSize="25sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="2dp"
                android:background="#FFFFFF">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:padding="2dp"
                    android:text="@string/age"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/homepage_age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp"
                    android:padding="2dp"
                    android:text="@string/secrecy"
                    android:textColor="#80CACD"
                    android:textSize="25sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="2dp"
                android:background="#FFFFFF">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:padding="2dp"
                    android:text="@string/constellation"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/constellation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp"
                    android:padding="2dp"
                    android:text="@string/secrecy"
                    android:textColor="#80CACD"
                    android:textSize="25sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="2dp"
                android:background="#FFFFFF">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:padding="2dp"
                    android:text="@string/location"
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp"
                    android:padding="2dp"
                    android:text="@string/secrecy"
                    android:textColor="#80CACD"
                    android:textSize="25sp" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="1dp"
                android:background="#ffffff"
                android:padding="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ffffff">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="#F2F2F2"
                        android:padding="5sp"
                        android:text="详细资料"
                        android:textSize="20sp" />

                </RelativeLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="2dp"
                android:background="#FFFFFF">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:padding="2dp"
                    android:text="@string/location"
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp"
                    android:padding="2dp"
                    android:text="@string/secrecy"
                    android:textColor="#80CACD"
                    android:textSize="25sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="2dp"
                android:background="#FFFFFF">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:padding="2dp"
                    android:text="@string/location"
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp"
                    android:padding="2dp"
                    android:text="@string/secrecy"
                    android:textColor="#80CACD"
                    android:textSize="25sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="2dp"
                android:background="#FFFFFF">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:padding="2dp"
                    android:text="@string/location"
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp"
                    android:padding="2dp"
                    android:text="@string/secrecy"
                    android:textColor="#80CACD"
                    android:textSize="25sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="2dp"
                android:background="#FFFFFF">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:padding="2dp"
                    android:text="@string/location"
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp"
                    android:padding="2dp"
                    android:text="@string/secrecy"
                    android:textColor="#80CACD"
                    android:textSize="25sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="2dp"
                android:background="#FFFFFF">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:padding="2dp"
                    android:text="@string/location"
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp"
                    android:padding="2dp"
                    android:text="@string/secrecy"
                    android:textColor="#80CACD"
                    android:textSize="25sp" />

            </RelativeLayout>
        </LinearLayout>

    </ScrollView>


    <Button
        android:layout_alignParentBottom="true"

        android:layout_marginBottom="30dp"
        android:id="@+id/homepage_sayhello"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:textColor="#ffffff"
        android:background="@drawable/sayhello"
        android:text="@string/sayhello" />
</RelativeLayout>
